Atualizar o pepa2.html

--- a/pepa2.html
+++ b/pepa2.html
@@ -67,7 +67,7 @@
     <input type="text" id="urlInput" placeholder="https://www.youtube.com/watch?v=p_WobIeOG2k" value="https://www.youtube.com/watch?v=p_WobIeOG2k">
     
     <!-- Botão para redirecionar -->
-    <button id="redirectButton">vai po link fi de puta, isso msm vc msm kiki</button>
+    <button id="redirectButton">teste html fo kayc, 2344</button>
     
     <!-- Mensagem de status -->
     <div class="message" id="message"></div>
